dashboard-ui/src/routes/dashboard/routes/report/report.scss
/* ... */
.report-header {
	color: #2C4856;
	font-size: 30px;
	font-weight: bold;
	border-top: 1px solid #CCC;
	border-bottom: 4px solid #CCC;
	padding-left: 25px;
	height: 60px;
	line-height: 60px;
	margin-bottom: 20px;
	background-color: #F4F2EC;

	> div {
		display: inline-block;
	}

	.facility-name {}

	.download {
		border: 1px solid red;
	}

	.period-selector-container {
		float: right;
		line-height: 45px;

		> div {
			> div {
				display: inline-block;
				line-height: 1px;
				border-right: 1px solid #CCC;
				
				select {
					padding-left: 12px;
					width: 200px;
					height: 31px;
					border-color: #CCC;
					color: #2C4856;
					border-radius: 4px;
					font-size: 12px;
					margin-left: 20px;
					margin-right: 20px;
				}
			}
		}
	}
}

.location-box {
	>div {
		width: calc(25% - 2px);
		height: 50px;
		background-color: #F4F2EC;
		border-top: 2px solid #CCC;
		border-bottom: 2px solid #CCC;
	}

	> div:not(:last-child) {
		border-right: 2px solid #CCC;
	}

	div {
		display: inline-block;
		line-height: 30px;
		text-align: center;
		color: #2C4856;
	}

	.location-title {
		padding: 10px;
		font-size: 13px;
	}

	.location-value {
		width: 60% !important;
		font-weight: bold;
	}
}

.population-box {
	font-weight: bold;
	border-bottom: 3px solid #CCC;

	> div {
		display: inline-block;
		width: 50%;
		vertical-align: text-top;
	}

	.info > div {
		padding: 10px;
	}

	.total-pop {
		color: #2C4856;
		font-size: 20px;
		font-weight: bold;

		span {
			font-size: 30px;
		}
	}

	.value-item {
		display: inline-block;
		padding: 14px;
		border-right: 1px solid #CCC;

		div:first-child {
			font-size: 14px;
			color: #B4B5A8;
		}

		div:last-child {
			font-size: 20px;
			color: #6D7280;
		}
	}

	.financing {
		width: 80%;

		.financing-header {
			height: 40px;
			text-align: center;

			> div {
				width: 33%;
				display: inline-block;
				border-bottom: 1px solid #CCC;
				border-right: 1px solid #CCC;
				font-size: 14px;
				color: #B4B5A8;
			}

			> div:last-child {
				border-right: none;
			}
		}

		.financing-row {
			height: 40px;
			text-align: center;

			> div:first-child {
				font-size: 20px;
				text-align: left;
			}

			> div {
				width: 33%;
				display: inline-block;
				border-right: 1px solid #CCC;
				color: #2C4856;
				font-size: 30px;
				font-weight: bold;
				height: 40px;
			}

			> div:last-child {
				border-right: none;
				color: #6D7280;

				span {
					padding-left: 5px;
					color: #cc1a1a;
					font-size: 16px;
				}
			}
		}
	}
}

.top-ten-deseases {
	padding-top: 30px;
	font-weight: bold;
	border-bottom: 3px solid #CCC;

	.top-ten-diagnosis-table {
		font-size: 20px;

		table {
			width: 100%;
			text-align: center;
			vertical-align: top;
			border-collapse: collapse;
		}

		.diagnosis-header {
			color: #135897;
			border-bottom: 2px solid #CCC;
		}

		.previous-period-header {
			color: #6D7280;
		}

		.current-period-header {
			background-color: #F4F2EC;
			color: #9C8568;
			>div{
				display: inline-block;
			}
		}

		.previous-period-sub-header {
			color: #6D7280;
			font-size: 14px;
			border-bottom: 2px solid #CCC;
		}

		.current-period-sub-header-partial {
			color: #B4B5A8;
			font-size: 14px;
			background-color: #F4F2EC;
			border-bottom: 2px solid #CCC;
		}

		.current-period-sub-header {
			color: #6D7280;
			font-size: 14px;
			background-color: #F4F2EC;
			border-bottom: 2px solid #CCC;
		}

		.desease-name {
			text-align: left;
			color: #2C4856;
		}

		.prevoius-value {
			color: #2C4856;
		}

		.current-value-partial {
			color: #B4B5A8;
			background-color: #F4F2EC;
		}

		.current-value {
			color: #2C4856;
			background-color: #F4F2EC;
		}

		.total-values {
			td {
				border-top: 2px solid #CCC;
			}

			.desease-name {
				text-align: right;
			}
		}
	}
}

.value-legend{
	float: left;
    font-size: 15px;
    font-weight: normal;
    color: #2c4856;
    word-spacing: 5px;
    margin-right: 15px;
}


.RMNCH-box {
	padding-top: 30px;
	font-weight: bold;
	border-bottom: 3px solid #CCC;

	.RMNCH-table {
		font-size: 20px;

		table {
			width: 100%;
			text-align: center;
			vertical-align: top;
			border-collapse: collapse;
		}

		.diagnosis-header {
			color: #135897;
			border-bottom: 2px solid #CCC;
		}

		.previous-period-header {
			color: #6D7280;
		}

		.current-period-header {
			background-color: #F4F2EC;
			color: #9C8568;
		}

		.previous-period-sub-header {
			color: #6D7280;
			font-size: 14px;
			border-bottom: 2px solid #CCC;
		}

		.current-period-sub-header-partial {
			color: #B4B5A8;
			font-size: 14px;
			background-color: #F4F2EC;
			border-bottom: 2px solid #CCC;
		}

		.current-period-sub-header {
			color: #6D7280;
			font-size: 14px;
			background-color: #F4F2EC;
			border-bottom: 2px solid #CCC;
		}

		.desease-name {
			text-align: left;
			color: #2C4856;
		}

		.prevoius-value {
			color: #2C4856;
		}

		.current-value-partial {
			color: #B4B5A8;
			background-color: #F4F2EC;
		}

		.current-value {
			color: #2C4856;
			background-color: #F4F2EC;
		}

		.total-values {
			td {
				border-top: 2px solid #CCC;
			}

			.desease-name {
				text-align: right;
			}
		}
	}
}

.deaths-box {
	padding-top: 30px;
	font-weight: bold;
	border-bottom: 3px solid #CCC;

	.total-pop {
		color: #2C4856;
		font-size: 20px;
		font-weight: bold;
		display: inline-block;
		padding: 20px;

		span {
			font-size: 30px;
		}
	}

	.value-item {
		display: inline-block;
		padding: 6px;
		border-right: 1px solid #CCC;
		display: inline-block;
		padding: 0 20px;

		div:first-child {
			font-size: 14px;
			color: #B4B5A8;
		}

		div:last-child {
			font-size: 20px;
			color: #6D7280;
		}
	}
}
/* ... */

